# GFDL

./: .gitignore  .mailmap  CITATION.cff  COPYING  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/constraints/: deps.txt
.github/workflows/: ci.yml  docs-deploy.yml  docs.yml  wheel.yml
baseline/singleRVFL/: main.py  notes.txt  singlelayer.py
docs/: Makefile
docs/source/: conf.py  dev.rst  index.rst  modules.rst  release.rst  rvfl.rst
docs/source/_templates/autosummary/: module.rst
docs/source/api/: gfdl.activations.rst  gfdl.model.rst  gfdl.weights.rst  index.rst
docs/source/development/: release_process.rst
docs/source/release/: 0.1.0-notes.rst  0.1.1-notes.rst  0.2.0-notes.rst  0.2.1-notes.rst  0.3.0-notes.rst
rvfl/: model.py
scripts/: experiment.py
src/gfdl/: __init__.py  activations.py  model.py  weights.py
src/gfdl/tests/: test_model.py  test_regression.py
src/rvfl/: __init__.py  activations.py  model.py  weights.py
src/rvfl/tests/: test_model.py  test_regression.py
tests/: test_model.py
tools/: gh_lists.py
