[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gfdl"
version = "0.0.0"
description = "Gradient Free Deep Learning (GFDL) networks including single and multi layer random vector functional link (RVFL) networks and extreme learning machines (ELMs)"
requires-python = ">=3.12"
dependencies = ["numpy", "scikit-learn", "pandas"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gfdl = ["testdata/**/*"]

[project.optional-dependencies]
test = [
    "ucimlrepo",
    "pytest",
    "pytest-cov",
]
