[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gfdl"
version = "0.0.0"
description = "Gradient Free Deep Learning (GFDL) networks including single and multi layer random vector functional link (RVFL) networks and extreme learning machines (ELMs)"
requires-python = ">=3.12"
dependencies = ["numpy", "scikit-learn", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gfdl = ["testdata/**/*"]


[project.optional-dependencies]
test = [
    "ucimlrepo",
    "pytest",
    "pytest-cov",
]

[tool.numpydoc_validation]
checks = [
    "all", # report on all checks, except the below
    "EX01", # we don't require examples sections yet
    "SA01", # we don't require "See Also" sections
    "ES01", # we don't require extended summaries
]

exclude = [
    '\.__init__$',
    '\._check_voting$',
    '\._forward$',
    'EnsembleGFDL(\.|$)', # ignore base class
    'GFDL(\.|$)', # ignore base class
]
